force-app/main/default/objects/Registrations__c/Registrations__c.object-meta.xml
<CustomObject>
    <label>Registration</label>
    <nameField>
        <displayFormat>REG-{0}</displayFormat>
        <label>Registration ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>