force-app/main/default/objects/Registrations__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account (usually a school) that the registrant belongs with.</description>
    <inlineHelpText>The account (usually a school) that the registrant belongs with.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>