force-app/main/default/objects/Registrations__c/fields/Airfare_PAX_2__c.field-meta.xml
<CustomField>
    <fullName>Airfare_PAX_2__c</fullName>
    <label>Airfare PAX 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accept</fullName>
            </value>
            <value>
                <fullName>Decline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>