force-app/main/default/objects/Registrations__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <defaultValue>400.00</defaultValue>
    <inlineHelpText>$400.00 Per Person</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>