force-app/main/default/objects/Registrations__c/fields/Assigned_Room__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Room</label>
    <referenceTo>Rooms__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>