force-app/main/default/objects/Registrations__c/fields/Athlete_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Athlete_Birth_Date__c</fullName>
    <label>Athlete Birth Date</label>
    <type>Date</type>
</CustomField>