force-app/main/default/objects/Registrations__c/fields/Athlete_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Athlete_First_Name__c</fullName>
    <label>Athlete First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>