force-app/main/default/objects/Registrations__c/fields/Athlete_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Athlete_Last_Name__c</fullName>
    <label>Athlete Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>