force-app/main/default/objects/Registrations__c/fields/Athlete_Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Athlete_Middle_Name__c</fullName>
    <label>Athlete Middle Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>