force-app/main/default/objects/Registrations__c/fields/Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>Birth_Date__c</fullName>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>