force-app/main/default/objects/Registrations__c/fields/Card_Last_4__c.field-meta.xml
<CustomField>
    <fullName>Card_Last_4__c</fullName>
    <formula>VALUE(RIGHT(Credit_Card_Number__c, 4))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Last 4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>