force-app/main/default/objects/Registrations__c/fields/Date_of_Birth_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth_Waiver__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>