force-app/main/default/objects/Registrations__c/fields/Emergency_Phone_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Phone_Waiver__c</fullName>
    <label>Emergency Phone</label>
    <type>Phone</type>
</CustomField>