force-app/main/default/objects/Registrations__c/fields/Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Exp_Date__c</fullName>
    <label>Exp Date</label>
    <length>5</length>
    <type>Text</type>
</CustomField>