force-app/main/default/objects/Registrations__c/fields/Full_Name_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Waiver__c</fullName>
    <label>Full Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>