force-app/main/default/objects/Registrations__c/fields/New_Process_Used__c.field-meta.xml
<CustomField>
    <fullName>New_Process_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Process Used</label>
    <type>Checkbox</type>
</CustomField>