force-app/main/default/objects/Registrations__c/fields/No_Oppty_Match__c.field-meta.xml
<CustomField>
    <fullName>No_Oppty_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Oppty Match</label>
    <type>Checkbox</type>
</CustomField>