force-app/main/default/objects/Registrations__c/fields/Number_of_Passengers_Formula__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Passengers_Formula__c</fullName>
    <formula>VALUE(Text( Number_of_Passengers__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Passengers (Formula)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>