force-app/main/default/objects/Registrations__c/fields/Participant_Signature_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Participant_Signature_Waiver__c</fullName>
    <inlineHelpText>Print Name</inlineHelpText>
    <label>Participant Signature</label>
    <length>100</length>
    <type>Text</type>
</CustomField>