force-app/main/default/objects/Registrations__c/fields/Participant_Type_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Participant_Type_Waiver__c</fullName>
    <label>Participant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Athlete</fullName>
            </value>
            <value>
                <fullName>Coach</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>