force-app/main/default/objects/Registrations__c/fields/PAX_1_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>PAX_1_Full_Name__c</fullName>
    <label>PAX 1 - Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>