force-app/main/default/objects/Registrations__c/fields/PAX_2_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>PAX_2_Full_Name__c</fullName>
    <label>PAX 2 - Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>