force-app/main/default/objects/Registrations__c/fields/Payment_Success__c.field-meta.xml
<CustomField>
    <fullName>Payment_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Success</label>
    <type>Checkbox</type>
</CustomField>