force-app/main/default/objects/Registrations__c/fields/PaymentDebug__c.field-meta.xml
<CustomField>
    <fullName>PaymentDebug__c</fullName>
    <label>PaymentDebug</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>