force-app/main/default/objects/Registrations__c/fields/Phase_2_Process__c.field-meta.xml
<CustomField>
    <fullName>Phase_2_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phase 2 Process</label>
    <type>Checkbox</type>
</CustomField>