force-app/main/default/objects/Registrations__c/fields/Registration_Contact__c.field-meta.xml
<CustomField>
    <fullName>Registration_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Registrations (Registration Contact)</relationshipLabel>
    <relationshipName>Registrations1</relationshipName>
    <type>Lookup</type>
</CustomField>