force-app/main/default/objects/Registrations__c/fields/Relationship_to_Athlete__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Athlete__c</fullName>
    <label>Relationship to Athlete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Guardian</fullName>
            </value>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Coach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>