force-app/main/default/objects/Registrations__c/fields/RGP__c.field-meta.xml
<CustomField>
    <fullName>RGP__c</fullName>
    <label>RGP</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agree to Purchase (RGP)</fullName>
                <default>true</default>
                <label>Agree to Purchase (RGP)</label>
            </value>
            <value>
                <fullName>Decline (RGP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>