force-app/main/default/objects/Registrations__c/fields/Room_No__c.field-meta.xml
<CustomField>
    <fullName>Room_No__c</fullName>
    <label>Room No</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>