force-app/main/default/objects/Registrations__c/fields/School_Name_Waiver__c.field-meta.xml
<CustomField>
    <fullName>School_Name_Waiver__c</fullName>
    <label>School Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>