force-app/main/default/objects/Registrations__c/fields/Shirt_Size_25__c.field-meta.xml
<CustomField>
    <fullName>Shirt_Size_25__c</fullName>
    <label>Shirt Size - $25.00</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Small - $25.00</fullName>
            </value>
            <value>
                <fullName>Large - $25.00</fullName>
            </value>
            <value>
                <fullName>Medium - $25.00</fullName>
            </value>
            <value>
                <fullName>Large XL - $25.00</fullName>
            </value>
            <value>
                <fullName>Large XXL - $25.00</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
                <isActive>false</isActive>
                <label>Large</label>
            </value>
            <value>
                <fullName>Large XL</fullName>
                <isActive>false</isActive>
                <label>Large XL</label>
            </value>
            <value>
                <fullName>Large XXXL - $25.00</fullName>
                <isActive>false</isActive>
                <label>Large XXXL - $25.00</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <isActive>false</isActive>
                <label>Medium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>