force-app/main/default/objects/Registrations__c/fields/Signature_Date_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Signature_Date_Waiver__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>