force-app/main/default/objects/Registrations__c/fields/Sport_Event_Activity_Waiver__c.field-meta.xml
<CustomField>
    <fullName>Sport_Event_Activity_Waiver__c</fullName>
    <label>Sport / Event / Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Baseball</fullName>
            </value>
            <value>
                <fullName>Boys Basketball</fullName>
            </value>
            <value>
                <fullName>Boys Lacrosse</fullName>
            </value>
            <value>
                <fullName>Cheer and Dance</fullName>
            </value>
            <value>
                <fullName>Chorus</fullName>
            </value>
            <value>
                <fullName>Cross Country</fullName>
            </value>
            <value>
                <fullName>Field Hockey</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Girls Basketball</fullName>
            </value>
            <value>
                <fullName>Girls Lacrosse</fullName>
            </value>
            <value>
                <fullName>Girls Leadership</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Instrumental</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Softball</fullName>
            </value>
            <value>
                <fullName>Tennis</fullName>
            </value>
            <value>
                <fullName>Track and Field</fullName>
            </value>
            <value>
                <fullName>Volleyball</fullName>
            </value>
            <value>
                <fullName>Wrestling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>