force-app/main/default/objects/Registrations__c/fields/Team_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Team_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Registrations (Team Opportunity)</relationshipLabel>
    <relationshipName>Registrations1</relationshipName>
    <type>Lookup</type>
</CustomField>