force-app/main/default/objects/Registrations__c/fields/Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms &amp; Conditions</label>
    <type>Checkbox</type>
</CustomField>