force-app/main/default/objects/Registrations__c/fields/Terms_Conditions_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Terms_Conditions_Accepted__c</fullName>
    <formula>IF(( Terms_Conditions__c  = TRUE),TODAY(),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terms &amp; Conditions Accepted</label>
    <type>Date</type>
</CustomField>