force-app/main/default/objects/Registrations__c/fields/Webcode__c.field-meta.xml
<CustomField>
    <fullName>Webcode__c</fullName>
    <inlineHelpText>If Applicable or School Name</inlineHelpText>
    <label>Webcode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>