force-app/main/default/objects/Registrations__c/fields/What_Would_You_Like_To_Share__c.field-meta.xml
<CustomField>
    <fullName>What_Would_You_Like_To_Share__c</fullName>
    <label>What Would You Like To Share</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>