force-app/main/default/objects/Registrations__c/fields/X1_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>X1_Birth_Date__c</fullName>
    <label>1 - Birth Date</label>
    <type>Date</type>
</CustomField>