force-app/main/default/objects/Registrations__c/fields/X1_First_Name__c.field-meta.xml
<CustomField>
    <fullName>X1_First_Name__c</fullName>
    <label>1 - First Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>